@@ -16,7 +16,6 @@
 #include <QObject>
 
 class ActionSender;
-class QHostAddress;
 
 namespace SphereSim
 {
@@ -45,7 +44,7 @@ namespace SphereSim
          * \param args The arguments that the program was invoked with.
          * \param addr The address that the socket will be connecting to.
          * \param port The port that the socket will be connecting to. */
-        ServerBenchmark(QStringList args, QHostAddress addr, quint16 port);
+        ServerBenchmark(QStringList args, const char* addr, quint16 port);
 
         ~ServerBenchmark();
 
