@@ -17,7 +17,6 @@
 #include <QTextStream>
 #include <vector>
 
-class QHostAddress;
 class QTimer;
 
 namespace SphereSim
@@ -65,7 +64,7 @@ namespace SphereSim
          * \param args The arguments that the program was invoked with.
          * \param addr The address that the socket will be connecting to.
          * \param port The port that the socket will be connecting to. */
-        SimulationGrapher(QStringList args, QHostAddress addr, quint16 port);
+        SimulationGrapher(QStringList args, const char* addr, quint16 port);
 
         ~SimulationGrapher();
 
