@@ -17,7 +17,6 @@
 #include <QObject>
 
 class ActionSender;
-class QHostAddress;
 
 namespace SphereSim
 {
@@ -57,7 +56,7 @@ namespace SphereSim
          * \param args The arguments that the program was invoked with.
          * \param addr The address that the socket will be connecting to.
          * \param port The port that the socket will be connecting to. */
-        ServerTester(QStringList args, QHostAddress addr, quint16 port);
+        ServerTester(QStringList args, const char* addr, quint16 port);
 
         ~ServerTester();
 
